# VulkanEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  graph.dot  tmp.frag
Application/: CMakeLists.txt
Application/src/: Main.cpp
Editor/: CMakeLists.txt
Editor/include/: HierarchyUI.hpp
Editor/src/: HierarchyUI.cpp  HierarchyUI.hpp  TestSystem.hpp  main.cpp
Engine/: CMakeLists.txt
Engine/include/: Application.hpp  Buffer.hpp  Camera.hpp  CommandBuffer.hpp  DebugUI.hpp  Descriptor.h  Descriptor.hpp  Engine.hpp  Framebuffer.hpp  Image.hpp  Model.hpp  Pipeline.hpp  RenderPass.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  TextureManager.hpp  UniformBuffer.hpp  VulkanContext.hpp  Window.hpp  pch.hpp
Engine/include/ECS/: Component.hpp  ComponentManager.hpp  ECS.hpp  ECSEngine.hpp  ECSMemoryManager.hpp  Entity.hpp  EntityManager.hpp  Event.hpp  EventDelegate.hpp  EventHandler.hpp  IComponent.hpp  IEntity.hpp  IEvent.hpp  IEventDelegate.hpp  ISystem.hpp  SceneSerializer.hpp  System.hpp  SystemManager.hpp  Types.hpp  Util.hpp
Engine/include/ECS/CoreComponents/: Camera.hpp  Lights.hpp  Material.hpp  Mesh.hpp  NameTag.hpp  Renderable.hpp  Static.hpp  Transform.hpp
Engine/include/ECS/CoreEvents/: ComponentEvents.hpp  EntityEvents.hpp
Engine/include/ECS/CoreSystems/: MaterialSystem.hpp  RendererSystem.hpp  TransformHierarchySystem.hpp
Engine/include/Memory/: MemoryChunkAllocator.hpp  PoolAllocator.hpp  UniformBufferAllocator.hpp
Engine/include/Utils/: AssimpImporter.hpp  Color.hpp  DebugUI.hpp  DebugUIElements.hpp
Engine/src/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  DebugUI.cpp  Engine.hpp  Framebuffer.cpp  Image.cpp  Image.hpp  Model.cpp  Model.hpp  Pipeline.cpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Shader.cpp  Shader.hpp  Texture.cpp  TextureManager.cpp  TextureManager.hpp  UniformBuffer.cpp  VulkanContext.hpp  Window.cpp  pch.cpp  pch.h  pch.hpp
Engine/src/Core/Events/: CoreEvents.hpp  Event.hpp  EventDelegate.hpp  EventHandler.cpp  EventHandler.hpp  IEvent.hpp  IEventDelegate.hpp
Engine/src/Core/Scene/: Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp
Engine/src/ECS/: Component.hpp  ComponentManager.cpp  ComponentManager.hpp  Core.cpp  Core.hpp  ECSEngine.cpp  ECSEngine.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EventHandler.cpp  EventHandler.hpp  IComponent.hpp  IEvent.hpp  ISystem.hpp  Observer.hpp  Query.hpp  SceneSerializer.cpp  SceneSerializer.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp  Types.hpp
Engine/src/ECS/CoreComponents/: BoundingBox.hpp  Camera.hpp  InternalTransform.hpp  Lights.hpp  Material.hpp  Mesh.hpp  NameTag.hpp  Relationship.hpp  Renderable.hpp  RendererComponents.hpp  SkyboxComponent.hpp  Transform.hpp
Engine/src/ECS/CoreEvents/: ComponentEvents.hpp  EntityEvents.hpp  SystemEvents.hpp
Engine/src/ECS/CoreSystem/: RendererSystem.cpp  TransformHierarchySystem.cpp
Engine/src/ECS/CoreSystems/: MainCameraSystem.hpp  MaterialSystem.cpp  RendererSystem.cpp  TransformHierarchySystem.cpp  TransformSystem.cpp  TransformSystem.hpp
Engine/src/Memory/: Allocator.hpp  BufferAllocator.cpp  BufferAllocator.hpp  LinearAllocator.cpp  LinearAllocator.hpp  MemoryChunkAllocator.hpp  PoolAllocator.cpp  PoolAllocator.hpp  StackAllocator.cpp  StackAllocator.hpp  UniformBufferAllocator.cpp  UniformBufferAllocator.hpp
Engine/src/Rendering/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Descriptor.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  MaterialSystem.cpp  MaterialSystem.hpp  Pipeline.cpp  Pipeline.hpp  Queue.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Sampler.hpp  Shader.cpp  Shader.hpp  Synchronization.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  VulkanContext.hpp  Window.hpp
Engine/src/Rendering/CoreRenderPasses/: DenoisePass.hpp  DepthPass.hpp  DrawcullPass.hpp  GTAOPass.hpp  LightCullPass.hpp  LightingPass.hpp  ShadowPass.hpp  SkyboxPass.hpp
Engine/src/Rendering/RenderGraph/: RenderGraph.cpp  RenderGraph.hpp  RenderPass.cpp  RenderPass.hpp  RenderingResource.hpp
Engine/src/Utils/: AssimpImporter.cpp  AssimpImporter.hpp  Color.cpp  Color.hpp  DebugUI.cpp  DebugUI.hpp  DebugUIElements.cpp  DebugUIElements.hpp  Log.cpp  Log.hpp  Profiling.hpp  Time.cpp  Time.hpp  TypeIDManager.hpp
Engine/src/Utils/FileDialog/: FileDialog.hpp  LinuxFileDialog.cpp  WindowsFileDialog.cpp
Engine/src/Utils/Math/: Hilbert.hpp
shaders/: CMakeLists.txt  base.frag  base.vert  bindings.glsl  common.glsl  compile.sh  computeBRDF.frag  computeBRDF.vert  convolution.frag  convolution.vert  denoise.comp  depth.frag  depth.vert  drawcull.comp  equiToCube.frag  equiToCube.vert  forwardplus.frag  forwardplus.vert  gtao.comp  lightCulling.comp  noise.glsl  phong.frag  prefilterEnv.frag  prefilterEnv.vert  shadow.vert  skybox.frag  skybox.vert  test.comp
